=== 2016-12-27
* Enhancement
  * Added ability to find span's by title
  * Changed order of initialization so initialize_page is called after goto
  * Added flash method to Element to temporarily change the background color
=== 2016-12-26
* Enhancement
  * Changed page_url to accept a symbol that will cause it to call a corresponding method
  * Updated all accessor methods to take a default identifier of {:index => 0}
  * Added a page level element method to return a generic Element object
  * Updated all page level element locators to take a default identifier of {:index => 0}
  * Added a method to retrieve all file fields on a page
=== 2016-12-23
* Enhancement
  * Added #execute_script method to Druid
  * Added support for finding the following using :css
      Button
      Link
  * Added method to fetch generic element
  * Support alias method 'on' for 'on_page', 'visit' for 'visit_page' on PageFactory
  * Changed Elements.element_class_for so parameters can be strings or symbols
  * Added element_with_focus method to return the element that has focus
  * Added support for the label element
=== 2016-12-20
* Fixes
  WARNING: This change breaks existing code
  * Changed the generated getter for select_list to return the text instead of the value
* Enhancements
  * Added #expected_title method to Druid
  * Added #expected_element method to Druid
=== Version 1.1.2 /2016-12-19
* Enhancements
  * Added #include? and #selected? to SelectList
  * Added #append to TextField
  * Added #wait_for_ajax support for the jQuery framework
  * Added #wait_for_ajax support for the Prototype framework
  * Added the ability to add new Javascript Frameworks to Druid via the #add_framework method
* Fixes
  * Fixed [] methods on OrderedList and UnOrderedList so it only gets direct children
  * Fixed items methods on OrderedList and UnOrderedList so it returns count of direct children
=== 2016-12-14
* Enhancements
  * Added shortcut method to check element exists