@@ -16,3 +16,9 @@ Feature: Handling Asynch calls
   Scenario: Wait until something is not visible
     Given I am on the async elements page
     Then I should be able to wait until the button becomes invisible
+
+  Scenario: Wait for an element to disappear from the page
+    Given I am on the async elements page
+    When I add a button a few seconds from now
+    And I remove a button a few seconds from now
+    Then I should not be able to find the button
